<resources>
    <string name="app_name">quiz</string>
    <string name="action_settings">Settings</string>
    <string name="radio_true">True</string>
    <string name="radio_false">False</string>
    <string name="btn_display">Display Results</string>
    <string name="btn_retry">Retry Download</string>
    <string name="btn_exit">Exit</string>
    <string name="text_msg_downloading">Downloading Questions ...</string>
    <string name="text_msg_download_err">Questions download failed. Please verify that you have a working internet connection and try again.</string>
</resources>
